<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bookends.BookProfileActivity">

    <TextView
        android:id="@+id/book_title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/book_title"
        android:textSize="40sp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/ibsn"
        android:layout_below="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textSize="15dp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/author"
        android:layout_below="@+id/ibsn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/author"
        android:textSize="25dp"
        android:textIsSelectable="true" />


    <ScrollView
        android:id="@+id/title_profile"
        android:layout_below="@id/author"
        android:layout_above="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/liked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    android:text="@string/static_liked"
                    android:textSize="30dp" />

            <TextView
                    android:id="@+id/recommend"
                    android:layout_below="@+id/liked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    android:text="@string/static_recommend"
                    android:textSize="30dp" />

            <TextView
                    android:id="@+id/sadscale"
                    android:layout_below="@id/recommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    android:text="@string/sadscale"
                    android:textSize="30dp"
                    android:background="@android:color/holo_blue_light" />

            <TextView
                    android:id="@+id/genres"
                    android:layout_below="@id/sadscale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    android:text="@string/genres"
                    android:textSize="40dp" />

            <TextView
                    android:id="@+id/triggers"
                    android:layout_below="@id/genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    android:text="@string/triggers"
                    android:textSize="40dp"
                    android:background="@android:color/holo_blue_light" />

            <TextView
                    android:id="@+id/another"
                    android:layout_below="@id/triggers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="40dp"
                    android:text="@string/another"
                    android:textSize="40dp" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/review"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:textSize="30sp"
        android:textAllCaps="false" />

</RelativeLayout>
