<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:textSize="25dp"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/scan"
        android:text="@string/scan"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/search"
        android:text="@string/search"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/scan"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/explore"
        android:text="@string/explore"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
